typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts:1:10
  |
1 | function =>
  |          ^^

